[package]
name = "inventor_parameters"
version = "0.1.0"
edition = "2021"
authors = ["Michael Angeles Michael.Angeles@nuntius.us"]
# description= "A helper library to generate Autodesk compatible parameter files.
# This library is capable of creating a single, or multiple parameter files. 
# While you can't automate the connection of Autodesk Inventor models directly, 
# this library allows you to take your simulations and write parameter files from them!"
readme = "README.md"

# repository = "https://github.com/rust-lang/cargo/"
license = "MIT"
license-file = "LICENSE.txt"
keywords = ["autodesk", "parameters", "model", "simulation"]
[dependencies]
serde = {version="1.0", features=["derive"]}
csv = {version = "1.3.0"}
rust_xlsxwriter = {version="0.6.0"}